- upgraded the target SDK 34 - adapt the library of crop image