@@ -19,28 +19,29 @@ android {
             storeFile file(keystoreProperties['storeFile'])
             storePassword keystoreProperties['storePassword']
         }
-        lintOptions {
-            checkReleaseBuilds false
-            // Or, if you prefer, you can continue to check for errors in release builds,
-            // but continue the build even when errors are found:
-            abortOnError false
-        }
     }
-
-    compileSdkVersion 31
-    buildToolsVersion "33.0.1"
+    compileSdk 34
     defaultConfig {
         applicationId "me.anky.connectid"
         minSdkVersion 21
-        targetSdkVersion 32
-        versionCode 13
-        versionName "2.3.1"
+        targetSdkVersion 34
+        multiDexEnabled true
+        versionCode 18
+        versionName "2.4.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
@@ -48,6 +49,11 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    namespace 'me.anky.connectid'
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
     }
 }
 
@@ -58,7 +64,7 @@ repositories {
 }
 
 ext {
-    supportLibVersion = '1.0.0-beta01'
+    supportLibVersion = '1.7.0'
     firebase = '17.0.0'
 }
 
@@ -67,9 +73,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.core:core:$core_version"
     implementation "androidx.appcompat:appcompat:${supportLibVersion}"
-    implementation "com.google.android.material:material:${supportLibVersion}"
-    implementation "androidx.recyclerview:recyclerview:${supportLibVersion}"
-    implementation "androidx.legacy:legacy-support-v4:${supportLibVersion}"
+    implementation "com.google.android.material:material:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
@@ -81,7 +87,8 @@ dependencies {
     annotationProcessor 'net.simonvt.schematic:schematic-compiler:0.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.commonsware.cwac:provider:0.5.0'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    //implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    implementation("com.vanniktech:android-image-cropper:4.6.0")
     implementation 'com.androidsx:rate-me:4.0.3'
     implementation 'org.greenrobot:eventbus:3.0.0'
     // Firebase crashlytics
